--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,10 +1,9 @@
-spring.datasource.data=classpath:data-dev.sql
-spring.jpa.show-sql= true
+server.port=8081
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=admin
+spring.datasource.username=sa
 spring.datasource.password=
